parser.y
%{
#include<stdio.h>
#include<string.h>
#include<stdlib.h>
extern FILE * yyin;
int yylex();
int yyerror(char *);

const int INT_TYPE = 0;
const int DOUBLE_TYPE = 1;
const int STR_TYPE = 2;
const int BOOL_TYPE = 3;

typedef struct Symbol{
        char *name;
        int type;
} Symbol;

typedef struct SymbolTable{
        Symbol symbol;  
        struct SymbolTable *next;
} SymbolTable;
SymbolTable *symbolTable;


void addType (Symbol new_symbol){
        if(symbolTable == NULL){
                symbolTable = (SymbolTable*) malloc(sizeof(SymbolTable));
                symbolTable->next = NULL;
                symbolTable->symbol = new_symbol;
        }
        SymbolTable* cur_node = symbolTable;
        while(cur_node->next != NULL){
                cur_node = cur_node->next;
        }
        cur_node->next = (SymbolTable*) malloc(sizeof(SymbolTable));
        cur_node->next->next = NULL;
        cur_node->next->symbol = new_symbol;
}

%}

%union {
  int int_val;
  double double_val;
  char str_val[300];
}


%token ADD SUB MUL DIV ASSIGN EQ NEQ TRU FLS AND OR NOT INT DCML BOOL STR SCOL ID BGN AEQ MEQ SEQ DEQ INCR DECR GEQ LEQ ARR IF ELSE LP BRK RETURN CMNT MLTI_CMNT INP
%token <int_val> INT_CONST 
%token <double_val> DCML_CONST
%token <str_val> STR_CONST

%type<int_val> data_type L arithmetic_stmt1 arithmetic_stmt2 unary_op_stmt
%%

program:            func_list BGN statements {printf("No problem\n");}; 

/*----------------Function Declaration ----------------------*/
func_list:          func_list function|  ;

function:           data_type ID '(' params ')' statements;

params:             param_list
                    | ;

param_list:         param_list',' param_type 
                    | param_type;

param_type:         data_type ID;

args:               arg_list
                    | ;

arg_list:           arg_list',' expr
                    | expr;        
/*------------------------------------------------------------*/



/*------------------Statement Declaration---------------------*/
statements:         '{' stmt_list '}' | stmt;

stmt_list:          stmt_list stmt | stmt;

stmt:               assign_stmt | cond_stmt | loop_stmt | array_decl | expressions;


assign_stmt:        data_type  L SCOL;

L:                  L ',' ID 
                    | ID
                    {}
                    ;

array_decl:         ARR '<'data_type',' INT_CONST'>' ID SCOL;


expressions:        expr SCOL;

expr:               variable ASSIGN expr
                    | variable AEQ expr
                    | variable SEQ expr
                    | variable MEQ expr
                    | variable DEQ expr
                    | variable INCR
                    | variable DECR
                    | cond_or_stmt;

variable:           ID
                    | ID '(' args ')'
                    | arr_variable;

arr_variable:       ID'['expr']'
                    | arr_variable '['expr']';

cond_or_stmt:       cond_or_stmt OR cond_and_stmt
                    | cond_and_stmt;

cond_and_stmt:      cond_and_stmt AND eql_stmt
                    | eql_stmt;

eql_stmt:           eql_stmt EQ comp_stmt
                    | eql_stmt NEQ comp_stmt
                    | comp_stmt;

comp_stmt:          comp_stmt comp_op arithmetic_stmt1
                    | arithmetic_stmt1;

comp_op:            '>'
                    | '<'
                    | GEQ
                    | LEQ;

arithmetic_stmt1:   arithmetic_stmt1 ADD arithmetic_stmt2
                        {
                                $$ = $1 + $3;
                        }
                    | 
                    arithmetic_stmt1 SUB arithmetic_stmt2
                        {
                                $$ = $1 - $3;
                        }
                    | 
                    arithmetic_stmt2
                        {
                                $$ = $1;
                        }
                    ;

arithmetic_stmt2:   arithmetic_stmt2 MUL unary_op_stmt
                        {
                                $$ = $1 * $3;
                        }
                    | arithmetic_stmt2 DIV unary_op_stmt
                        {
                                $$ = $1 / $3;
                        }
                    | unary_op_stmt
                        {
                                $$ = $1;
                        }
                    ;

unary_op_stmt:      NOT unary_op_stmt
                    | ADD unary_op_stmt
                    | SUB unary_op_stmt
                    | variable
                    | constant;


cond_stmt:          IF '(' expr ')' '{'stmt_list'}' cond_stmt2;

cond_stmt2:         ELSE stmt | ;



loop_stmt:          LP '(' expr ')' statements;


data_type:          INT {
                                                $$ = INT_TYPE;
                        }
                        | 
                        DCML{
                                                $$ = DOUBLE_TYPE;
                        }
                        
                        | STR {
                                                $$ = STR_TYPE;
                        }
                        | BOOL {
                                                $$ = BOOL_TYPE;
                        };
constant:           INT_CONST | DCML_CONST | STR_CONST;
/*------------------------------------------------------------*/

%%

int main(int argc, char *argv[])
{
   if (argc != 2) {
       printf("\nUsage: <exefile> <inputfile>\n");
       exit(0);
   }
   yyin = fopen(argv[1], "r");
   symbolTable = NULL;
   yyparse();
}


int yyerror(char *s){
  printf("Error: %s\n", s);
}
